Fix nav overflow

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
   color: var(--color-muted);
   background-color: var(--color-primary-dark);
+  overflow-x: hidden;
   padding: var(--padding-huge) 0 var(--padding-large) 0;
 }
 
